# metrocalk

./: .gitattributes  .gitignore  Cargo.toml  M0-gate-review.md  Metrocalk-Engine-Feasibility-and-Hosting-Plan.md  README.md  architecture.md  hosting.md  metrocalk.md  north-star-tests.md  physics-audio-networking-plan.md  progress.md  rust-toolchain.toml
assets/: Cargo.toml
assets/examples/: gen_fixtures.rs
assets/src/: audio.rs  autorig.rs  demo.rs  env_import.rs  fbx_import.rs  gltf_import.rs  gpu.rs  image_import.rs  import.rs  ktx2_import.rs  lib.rs  lod.rs  mesh.rs  obj_import.rs  provenance.rs  signed.rs  source.rs  store.rs
assets/src/audio/: tests.rs
assets/tests/: fbx_bakeoff.rs  import_bench.rs
assets/tests/fixtures/: checker_64.basis
authoring/: Cargo.toml
authoring/src/: lib.rs
authoring/tests/: bench.rs
constraint/: Cargo.toml
constraint/examples/: hash.rs
constraint/src/: canonical.rs  conflict.rs  ezpz_backend.rs  lib.rs  sketch.rs  tests.rs
constraint/tests/: bench.rs
core/: Cargo.toml
core/src/: caps.rs  catalog.rs  compose.rs  entity_id.rs  lib.rs  marketplace.rs  merge.rs  pipeline.rs  producer.rs  project.rs  registry.rs  resolve.rs  revision.rs  rule_runtime.rs  rules.rs  state_machine.rs  stdlib.rs  taxonomy.rs  undo.rs  variant.rs
core/tests/: bench_undo.rs  catalog_bench.rs  compose.rs  compose_bench.rs  merge.rs  override_model.rs  pipeline.rs  plugin_boundary.rs  registry.rs  resolve.rs  rule_runtime.rs  rule_runtime_bench.rs  rules.rs  rules_bench.rs  state_machine.rs  state_machine_bench.rs  tier_bench.rs  transport_sync.rs  undo.rs
csg/: Cargo.toml
csg/src/: lib.rs
csg/tests/: bench.rs  fuzz.rs
deform/: Cargo.toml
deform/src/: arap.rs  lib.rs  linalg.rs  skin_weights.rs  tests.rs
dst/: Cargo.toml
dst/src/: lib.rs
economy/: Cargo.toml
economy/src/: ledger.rs  lib.rs  model.rs  payment.rs  units.rs
economy/tests/: ledger.rs  ledger_bench.rs
ecs/: Cargo.toml
ecs/src/: flecs_backend.rs  lib.rs  rng.rs  scene.rs
ecs/tests/: compat.rs
editor-shell/: Cargo.toml
editor-shell/assets/: healthbar.glb  prop.glb  sphere.glb
editor-shell/e2e/: .gitignore  README.md  bootstrap.mjs  package.json  wdio.acceptance.conf.js  wdio.conf.js  wdio.reload.conf.js
editor-shell/e2e/lib/: acceptance.js
editor-shell/e2e/pages/: react.js  scaffold.js
editor-shell/e2e/specs/: northstar.e2e.js
editor-shell/e2e/specs-reload/: reload.e2e.js
editor-shell/e2e/specs/acceptance/: add-palette-generate.acceptance.e2e.js  (+15 more)
editor-shell/src/: actions.rs  ai.rs  blobstore.rs  bom.rs  bridge.rs  cad_import.rs  cad_intent.rs  capscene.rs  compose_ai.rs  constraint_intent.rs  cosim.rs  csg_intent.rs  feature_history.rs  generate.rs  generative.rs  kinematics.rs  lib.rs  metering.rs  pdm.rs  persist.rs  physics_intent.rs  play_rules.rs  plugin_host.rs  pmi.rs  pmi_step.rs  project.rs  reimport.rs  reveal.rs  sdf_intent.rs  transform_solver.rs  wallet.rs
editor-shell/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
editor-shell/src-tauri/examples/: mesh_frame_bench.rs
editor-shell/src-tauri/src/: ibl.rs  main.rs  post.wgsl  render.rs  scene.wgsl  ssao.wgsl
editor-shell/src/cad_import/: tests.rs
editor-shell/tests/: action_bench.rs  actions.rs  ai_patch.rs  camera.rs  cap_rebuild.rs  capstone.rs  catalog_add.rs  compose.rs  constraint_spike.rs  csg_carve.rs  deform_override.rs  economy_wiring.rs  feature_history_spike.rs  generate.rs  generate_bench.rs  generative_design_spike.rs  geometry_path_spike.rs  geometry_visual.rs  interchange_import.rs  lighting.rs  m2_budget.rs  marketplace.rs  mesh_assets.rs  north_star_1.rs  north_star_2.rs  part_editing.rs  pdm_digital_thread.rs  persistence.rs  play_runtime.rs  plugin.rs  project_save_open.rs  reimport_identity_spike.rs  reload_surfacing.rs  reveal.rs  reveal_live_cost.rs  roundtrip.rs  rule_runtime.rs  rules.rs  scene_authoring.rs  semantic_pmi_spike.rs  (+4 more)
editor-shell/web/: index.html
efficiency/: Cargo.toml
efficiency/src/: lib.rs
efficiency/tests/: bench.rs
gizmo/: Cargo.toml
gizmo/src/: lib.rs  math.rs
hotpatch/: Cargo.toml
hotpatch/src/: lib.rs
hotpatch/tests/: bench.rs
interchange/: Cargo.toml
interchange/examples/: read_cad.rs  render_step.rs
interchange/src/: analytic.rs  cad_import.rs  lib.rs  reimport_identity.rs  step.rs  urdf.rs  usd.rs
interchange/src/cad_import/: tests.rs  threedxml.rs
interchange/tests/fixtures/: assembly_never_silent.step  cube_ap242.step
ivm/: Cargo.toml
ivm/src/: lib.rs
ivm/tests/: bench.rs
lattice/: Cargo.toml
lattice/src/: lib.rs
mcp/: Cargo.toml
mcp/src/: lib.rs  main.rs
mcp/tests/: server_smoke.rs  tools.rs
physics/: Cargo.toml
physics/src/: accuracy.rs  lib.rs  rapier_backend.rs  replay.rs
plugins/: Cargo.toml
plugins/example-plugin/: Cargo.toml
plugins/example-plugin/src/: lib.rs
plugins/src/: extism_host.rs  host.rs  lib.rs
plugins/tests/: bench.rs  host.rs
plugins/tests/fixtures/: arrange.wasm
sdf/: Cargo.toml
sdf/examples/: hash.rs
sdf/src/: lib.rs
sdf/tests/: bench.rs
skeleton/: Cargo.toml
skeleton/src/: ik.rs  lib.rs  tests.rs
spikes/flecs/: Cargo.toml  README.md  results-run1-safety-off.md  results-run1-safety-on.md  results-run2-safety-off.md  results-run2-safety-on.md
spikes/flecs/benches/: compat.rs
spikes/flecs/src/: lib.rs  main.rs  rng.rs
spikes/physics/: Cargo.toml
spikes/physics/src/: harness.rs  lib.rs  main.rs
spikes/render-scene/: .gitignore  Cargo.toml  README.md  RESULTS.md  build.ps1  serve.mjs  verify-browser.mjs
spikes/render-scene/src/: cull.wgsl  lib.rs  main.rs  rng.rs  scene.rs  shader.wgsl
spikes/render-scene/web/: index.html
spikes/wasm/: CONSTRAINTS.md  Cargo.toml  README.md  build.ps1  serve.mjs  verify-browser.mjs
spikes/wasm/src/: lib.rs  main.rs
spikes/wasm/web/: index.html
tools/query-gate/: Cargo.toml  README.md
tools/query-gate/src/: main.rs
transport/: Cargo.toml  README.md
transport/src/: frame.rs  impls.rs  lib.rs  session.rs
transport/src/impls/: ws.rs
transport/tests/: protocol.rs
(+198 files in other folders)
