# metrocalk-assets (M4 / Phase-2 asset gate) — the local asset + import substrate.
#
# This crate is the project's INTERNAL, trait-wrapped asset representation + glTF/glb importer +
# content-addressed store + GPU-ready vertex packing. It is deliberately decoupled from `/core`
# (Flecs, native-only) and `/transport` (Loro) so it can cross to `wasm32-unknown-unknown` (ADR-006,
# deliverable 6) — exactly the fence that keeps Flecs out of the browser build. It owns NO scene
# truth: entities reference an asset by lightweight handle (invariant 2); the ECS stays authoritative
# over which asset an entity uses (invariant 1). Foreign decoder types (`gltf::`, `image::`) stay
# behind the importer module (invariant 5; CI grep gate), like `flecs_ecs` behind `/ecs`.
[package]
name = "metrocalk-assets"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# glTF/glb parser — pure Rust, wasm32-clean. `default-features = false` drops the `import` feature
# (which pulls `image` + `base64` + a transitively-rayon'd decoder path that breaks wasm) and the fs
# entry point; we read self-contained `.glb` blobs via `Gltf::from_slice` and decode textures with
# our own pinned `image`. `utils` = the `read_*` reader helpers; `names` = `.name()` accessors.
gltf = { version = "1.4", default-features = false, features = ["utils", "names"] }
# PNG + JPEG decode (standalone user-image import, M10.2) + Radiance HDR decode (M11.3 inc.2 IBL env maps),
# pure Rust, wasm32-clean (no rayon / no C codecs — `default-features = false`; `jpeg-decoder`'s rayon is an
# opt-in feature we do NOT enable).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "hdr"] }
# Wavefront OBJ decode (M11.1) — pure Rust, wasm32-clean. `default-features = false` drops `ahash`
# (whose runtime-rng pulls getrandom, which breaks wasm32-unknown-unknown); std hashing is plenty for a
# one-shot import. `tobj::` stays behind `obj_import.rs` (the importer-wrapper boundary, like `gltf::`).
tobj = { version = "4.0", default-features = false }
# Makes the packed vertex `Pod` so the native renderer can `cast_slice` it into a GPU buffer. Pure
# Rust, wasm32-clean.
bytemuck = { version = "1", features = ["derive"] }
# The skeletal runtime (M9.3 / G3) — the importer maps a glTF `skin` (joints + inverseBindMatrices +
# JOINTS_0/WEIGHTS_0) onto a `skeleton::Skeleton` INSIDE the wrapper (gltf_import.rs), so the loaded rig
# crosses out as OUR type, no `gltf::` leak. Pure Rust (glam + the gizmo crate's plain arrays), wasm32-clean.
metrocalk-skeleton = { path = "../skeleton" }
# FBX import (M11.1, ADR-040) — the `ufbx` C library wrapped via FFI (`cc`). Robust ASCII+binary+skinning,
# but **native-only** → OFF by default behind the `fbx` feature so the crate stays wasm32-clean (the
# wasm-tripwire builds the default). `ufbx::` stays behind `fbx_import.rs` (grep-gated, like `gltf::`).
ufbx = { version = "0.10", optional = true }
# KTX2/basis texture transcode (M11.1, ADR-040) — `basis-universal` wraps Binomial's C++ codec via FFI.
# Native-only (C++ → no wasm) → behind the `ktx2` feature. `basis_universal::` stays behind `ktx2_import.rs`.
basis-universal = { version = "0.3", optional = true }

[features]
default = []
# M11.1 native-only FFI formats (ADR-040): the editor app enables this; the wasm/browser funnel never does
# (the FBX/KTX2 conversions are a server-side seam there — the explicit wasm boundary).
native-formats = ["fbx", "ktx2"]
fbx = ["dep:ufbx"]
ktx2 = ["dep:basis-universal"]

[dev-dependencies]
# Round-trip the demo glb generators back through the importer in tests.
# Bake-off comparison ONLY (M11.1 crate eval, ADR-040): the pure-Rust FBX DOM parser — experimental,
# binary-only — measured head-to-head with `ufbx` on the SAME fixture, then NOT used in production.
fbxcel-dom = "0.0.10"

[lints]
workspace = true
