[package]
name = "metrocalk-editor-shell"
version = "0.1.0"
edition = "2021"
publish = false

# M2.6 convergence — the Rust side of the desktop editor shell. This `bridge` lib is the seam between
# the REAL `/core` (Engine: commit pipeline + World + Loro) and the M2.5 editor's `ProjectionDelta` /
# `EditTx` contract — NO MockCore. It's a workspace member (CI-tested); the Tauri app (`src-tauri`,
# wgpu viewport + transparent WebView2 per ADR-008) is built on top of it and excluded from the
# workspace like the other shells.
[lib]
path = "src/lib.rs"

[dependencies]
metrocalk-core = { path = "../core" }
metrocalk-ecs = { path = "../ecs" }
# The token economy (M7) — the wallet/metering seam wraps the pure ledger + cost model + payment seam.
metrocalk-economy = { path = "../economy" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# The asset/import substrate — used by the headless mesh test (import a checked-in glTF → place an
# entity carrying its handle → undo → replay). Not a runtime dep of the bridge lib (handles are opaque
# strings here); only the binary (src-tauri) imports + renders meshes.
metrocalk-assets = { path = "../assets" }

[lints]
workspace = true
