[package]
name = "metrocalk-editor-shell"
version = "0.1.0"
edition = "2021"
publish = false

# M2.6 convergence — the Rust side of the desktop editor shell. This `bridge` lib is the seam between
# the REAL `/core` (Engine: commit pipeline + World + Loro) and the M2.5 editor's `ProjectionDelta` /
# `EditTx` contract — NO MockCore. It's a workspace member (CI-tested); the Tauri app (`src-tauri`,
# wgpu viewport + transparent WebView2 per ADR-008) is built on top of it and excluded from the
# workspace like the other shells.
[lib]
path = "src/lib.rs"

[dependencies]
metrocalk-core = { path = "../core" }
metrocalk-ecs = { path = "../ecs" }
# The token economy (M7) — the wallet/metering seam wraps the pure ledger + cost model + payment seam.
metrocalk-economy = { path = "../economy" }
# The interchange tier (M8.5) — URDF/USD import behind the `Interchange` trait, mapped to registry
# components by `capscene::import_scene`. Brings the neutral SceneImport + the re-exported /physics
# boundary enums (BodyKind/ColliderShape/JointDesc); no urdf_rs/openusd type crosses (grep-gated).
metrocalk-interchange = { path = "../interchange" }
# The gizmo (M9.1) — M9.2 part editing reuses G1's plain-array `Transform` + the parent-space
# write-back (`to_local`/`mat_mul`) for child-node transforms. glam stays behind the trait (grep-gated).
metrocalk-gizmo = { path = "../gizmo" }
# The deformation tier (M9.5 / G5, ADR-029) — a handle deform is saved as a G2 override (the handle
# targets are per-field override ops); `reconstruct_part_deform` reads them back + runs the deterministic
# ARAP deformer to reproduce the surface. Pure f64 math, no foreign type leaks.
metrocalk-deform = { path = "../deform" }
# The asset/import substrate (M4/M10.2/M11.1). Used by `blobstore` (M11.1) to persist generated/imported
# asset bytes by content address (`AssetId`) so a generated mesh survives reload — the M6 residual. Pure
# Rust + wasm32-clean, so it doesn't compromise the lib's portability. The `signing` feature (M11.5 /
# ADR-044) is enabled for the M15.1 PDM service (`pdm`): a released revision reuses the Ed25519
# `SignedProvenanceTrust` for its tamper-evident content-addressed identity (the crypto stays confined to
# `assets/src/signed.rs`, invariant 5; pure-Rust `ed25519-dalek`, so the lib stays wasm-clean).
metrocalk-assets = { path = "../assets", features = ["signing"] }
# Robust exact-predicate CSG (M13.2 / ADR-051). `csg_intent` drives a boolean over the asset store and
# lands the result as a content-addressed MeshAsset + a place_mesh-style undoable commit (core stays
# mesh-agnostic — the geometry lives in the store by handle, never in Loro). The `Csg` trait is the
# boundary; no `robust::`/`csgrs::` type crosses (grep-gated). Pure Rust + wasm-clean.
metrocalk-csg = { path = "../csg" }
# The WASM plugin host (M12.3 / ADR-047) — the honest-ceiling escape. editor-shell drives a sandboxed
# plugin through the project-owned `PluginHost` trait (NO `extism::` type crosses — grep-gated) and lands
# its effect as a schema-validated undoable transaction via the M6 `apply_ai_patch` contract.
metrocalk-plugins = { path = "../plugins" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
